-【アルバム】ファイルリネーム時に del キーが使用できない。
-【httpd/EXE】Socket を STDIN に接続するのを止め、若干高速化しました。
-【httpd/EXE】index.htmlを有効化しました。
-【httpd/EXE】大きいファイルをダウンロードする場合、すべてメモリに展開しないようにしました。
-【adiary.conf.cgi.sample】大きいファイルはテンポラリに書き出すよう変更。
-【adiary.conf.cgi.sample】{<$Form_options.multipart_use_temp>}を{<$Form_options.use_temp_flag>}に変更。((ディレクトリ名を設定するのかフラグを設定するのか非常にわかりにくく、自分でハマってしまったので……。))
-【plugin】非公開コメントにヘルプを出せる機能を追加。
-【Fix/Ver3.20-】デザイン編集時に、ヘッダが常に標準のまま（非カスタム状態で）出力されてしまう。
-【Fix】稀に最初のファイルアップロードに失敗することがある。
-【Fix】静的出力時、ヘッダにゴミが出力される。
-【Fix】致命的エラーメッセージ（初期ディレクトリ作成失敗）がきちんと表示されない。
-【Fix】大きなファイルを送信されたとき、{<$Form_options.multipart_use_temp_dir>}を設定していても、すべてメモリに展開していた。((multipart_use_temp_dirを設定していない場合、無条件にメモリに展開します。))
-【Fix】テンポラリとして /tmp などパーティションが異なるディレクトリを指定すると、アップロードに失敗する。
-【Security/httpd/EXE】HTTP_HOSTヘッダにタグを挿入可能だった。((RSS以外に展開されることはないので、実害はあまりない。))
-【Security】HTTP_HOSTヘッダに虚偽の設定をした上でコメントを投稿するとRSSのホスト名部分を外部から書き換えられてしまう。((Hostヘッダインジェクションと呼ばれる攻撃です。一般的なレンタルサーバでは VirtualHost と呼ばれる設定を使用しているため問題ありません。))
-他

*Ver3.22 : 2019/02/15

-【Fix】sitemapプラグインが動かない。
-【Fix】AMPプラグインにCSSが適用されない。
-【Fix】mod_perl2環境で動作が不安定。
-【Fix】インポート等のセッション画面表示がおかしい。
-【httpd/EXE】コードを若干変更。

*Ver3.21b : 2019/02/12

-内部処理を見直し、2%-5%程度処理を高速化しました。
-起動時のパス解析を更新しました。
-静的出力（エクスポート）機能を更新しました。
-テーマ選択画面を少し見やすくしました。
-【記法】Markdown式の「```～```」等の[https://adiary.org/v3man/Satsuki/block:ブロック記法]に対応しました。((シンタックスハイライトや数式記法は人によってはよく使うにもかかわらず記述方法がややこしいので、覚えやすい記法をMarkdownより輸入しました。))
-【記法】ブロック記法を若干改良しました。
-【記法】同じ内容の注釈でもセクションが異なれば別々に出力するようにしました。
-【記法】フィルター記法をはてなブログURLに対応させました。
-【Markdown】注釈記法を追加しました。
-【Markdown】[https://qiita.com/Qiita/items/c686397e4a0f4f11683d#%E6%95%B0%E5%BC%8F%E3%81%AE%E6%8C%BF%E5%85%A5:Qiitaのmathブロック記法]を追加しました。
-【httpd/EXE】max_request設定を追加し、デーモンの自動再起動を内蔵しました。((長期運用したときメモリリークしないための措置です))
-【httpd/EXE】引数を若干変更しました。
-【httpd/EXE】adiary.conf.cgiが存在しない時、自動生成するようにしました。
-【plugin】JavaScriptプラグインを更新。
-【plugin】フリー入力プラグイン（メイン部）に表示条件を選択する機能が付きました。
-【plugin】メール通知プラグイン。sendmailコマンドを止め、SMTPで送信するようになりました。
-【Fix】JavaScript強制更新用queryが一部正しくない。