@@ -5,7 +5,7 @@
 
 <$tw.consumer_key    = 'fqBn4Wmq2x3KyZUjPWYeNA'>
 <$tw.consumer_secret = 'V4hXwwBL09ejgkfb3zxs7OQWmQR3PZIkQdkhjzLaXQ'>
-<$tw.callback_url    = "<@v.server_url><@v.myself>">
+<$tw.callback_url    = 'https://adiary.org/oauth_token.html'>
 <$tw.request_token_path = 'https://api.twitter.com/oauth/request_token'>
 <$tw.authorize_path     = 'https://api.twitter.com/oauth/authorize'>
 <$tw.access_token_path  = 'https://api.twitter.com/oauth/access_token'>
