@@ -17,6 +17,7 @@
 -【adiary.conf.cgi.sample】大きいファイルはテンポラリに書き出すよう変更。
 -【adiary.conf.cgi.sample】{<$Form_options.multipart_use_temp>}を{<$Form_options.use_temp_flag>}に変更。((ディレクトリ名を設定するのかフラグを設定するのか非常にわかりにくく、自分でハマってしまったので……。))
 -【plugin】非公開コメントにヘルプを出せる機能を追加。
+-【Fix/plugin】Twitter通知プラグイン。2018/06/13以降、新規認証に失敗していた。
 -【Fix/Ver3.20-】デザイン編集時に、ヘッダが常に標準のまま（非カスタム状態で）出力されてしまう。
 -【Fix】稀に最初のファイルアップロードに失敗することがある。
 -【Fix】静的出力時、ヘッダにゴミが出力される。
